tests/ui/wf/wf-trait-fn-where-clause.current.stderr
error[E0277]: the trait bound `Self: Eq` is not satisfied
  --> $DIR/wf-trait-fn-where-clause.rs:18:20
   |
LL |         Bar<Self>: Copy;
   |                    ^^^^ the trait `Eq` is not implemented for `Self`
   |
note: required by a bound in `Bar`
  --> $DIR/wf-trait-fn-where-clause.rs:10:15
   |
LL | struct Bar<T: Eq + ?Sized> {
   |               ^^ required by this bound in `Bar`
help: consider further restricting `Self`
   |
LL |         Bar<Self>: Copy, Self: Eq;
   |                        ++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
